--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ bs4 = "^0.0.1"
 pytest = "^5.2"
 
 [build-system]
-requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
+requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@main"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.plugins."intake.drivers"]
